<?xml version="1.0" encoding="utf-8"?>
<com.xyz.awesomerating.ui.FeedbackFormView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/ar_margin_big"
    android:paddingEnd="@dimen/ar_margin_big"
    android:paddingTop="@dimen/ar_margin_normal"
    android:paddingBottom="@dimen/ar_margin_big">

    <View
        android:layout_width="@dimen/ar_drag_handle_width"
        android:layout_height="@dimen/ar_drag_handle_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ar_margin_normal"
        android:background="@drawable/ar_bg_drag_handle"/>

    <ImageView
        android:layout_width="@dimen/ar_icon_size"
        android:layout_height="@dimen/ar_icon_size"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ar_ic_heart_wrench"
        android:tint="?attr/arNegativeColor"
        android:layout_marginBottom="@dimen/ar_margin_normal"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/ar_title"
        style="@style/AR.TextAppearance.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ar_feedback_title"
        android:gravity="center"
        android:layout_marginBottom="@dimen/ar_margin_small"/>

    <TextView
        style="@style/AR.TextAppearance.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/ar_feedback_subtitle"
        android:layout_marginBottom="@dimen/ar_margin_big"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ar_feedback_input_layout"
        style="@style/AR.TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ar_feedback_hint"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        android:layout_marginBottom="@dimen/ar_margin_normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ar_feedback_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ar_feedback_edittext_height"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:imeOptions="actionDone"
            android:maxLength="500"
            android:freezesText="true"
            android:textColor="?attr/arTextPrimaryColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/ar_margin_small">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ar_device_info_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ar_include_device_info"
            android:textColor="?attr/arTextPrimaryColor"
            app:buttonTint="?attr/arPrimaryColor"/>
    </LinearLayout>

    <TextView
        android:id="@+id/ar_device_info_sublabel"
        style="@style/AR.TextAppearance.Microcopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ar_include_device_info_sub"
        android:paddingStart="36dp"
        android:paddingEnd="0dp"
        android:layout_marginBottom="@dimen/ar_margin_small"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/ar_device_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="@dimen/ar_margin_normal"
        android:textSize="@dimen/ar_text_microcopy"
        android:visibility="gone"
        app:chipIcon="@drawable/ar_ic_phone"
        app:chipBackgroundColor="?attr/arSurfaceVariantColor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ar_feedback_send_button"
        style="@style/AR.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ar_feedback_send_button"
        android:enabled="false"
        app:icon="@drawable/ar_ic_send"
        app:iconGravity="textStart"/>

    <TextView
        android:id="@+id/ar_feedback_not_now_button"
        style="@style/AR.Button.Ghost"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ar_min_touch_size"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/ar_margin_small"
        android:text="@string/ar_feedback_not_now_button"
        android:clickable="true"
        android:focusable="true"/>

</com.xyz.awesomerating.ui.FeedbackFormView>
